--- a/app/globals.css
+++ b/app/globals.css
@@ -40,8 +40,8 @@
   --sidebar-accent-foreground: oklch(0.205 0 0)
     --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
+  --foreground: oklch(1 0 0);
+  --background: oklch(0.145 0 0);
 }
 
 @theme inline {
@@ -126,7 +126,7 @@
     @apply text-gradient text-6xl font-semibold max-sm:text-4xl;
   }
 
-  h3 {
+  h2 {
     @apply font-schibsted-grotesk text-2xl font-bold;
   }
 
@@ -307,4 +307,8 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
+}
+
+.event-card-wrapper {
+  z-index: 5;
 }
